2018-01-31 Release 4.5
	- the merge-data filter now looks for keys in *all* candidate
	  columns (not just the first-matching ones)
	- add skip_untagged parameter to without_columns and ColumnFilter,
	  for removing columns without HXL hashtags
	- hxl.model.Row.get_all can take a default value

2017-11-22 Release 4.4
	- throw proper exception for failed HTTP request from requests library
	- support JSON arrays of objects as well as arrays of arrays
	- recursively search for HXL data inside a JSON dataset

2017-06-13 Release 4.3
	- fixed bug with disabling SSL checks via requests library
	- improved Excel data handling — use integers instead of floats
	  when possible, and fix bug when trying to parse numbers as dates

2017-06-05 Release 4.1
	- support JSON input (list of rows)
	- add fill_data filter to fill empty cells from previous rows
	- use MIME type and extension where available to help choose type
	- grab character encoding from HTTP response if available
	- add verify_ssl parameter to hxl.io.data, hxl.io.make_input,
  	  etc. Defaults to True; if False, don't try to validate SSL certs
	- add new "is (not)" operator for row queries
	- add optional date_format parameter for clean data filter
	- fix bug with error messages from scripts
	- fix output bug in command-line scripts
	- fix bug in merge filter
	- fix bug in hxl.io.tagger

2016-12-02 Release 4.0
	- Fully modularised JSON specs and recipes.
	- Made JSON specs and recipes work recursively.
	- Fix bug that caused select filter to fail after explode filter
	- Added top-level hxl.tagger() function, similar to hxl.data()
	- add optional default_header arg to hxl.model.Column.parse_spec
	- major overhaul of the merge_data filter: now merges *all* columns
	  matching the pattern supplied, and doesn't create an empty
	  column if there are no matching columns in the merge dataset
	- refactored append filter to allow multiple append files in
	  single filter

2016-10-17 Release 3.3